--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "d3": "^5.16.0",
     "fs": "0.0.1-security",
     "highcharts": "^8.0.4",
+    "highcharts-react-official": "^3.0.0",
     "json-server": "^0.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
